# d2l

./: .gitignore  amex.ipynb  pyproject.toml
notebook/: survival.ipynb
notebook/CNNs/: advanced_cnns.ipynb  basics.ipynb
notebook/ComputerVision/: basics.ipynb  detection.ipynb  filtering.ipynb  vision_transformer.ipynb
notebook/ComputerVision/exercises/ex2/: ex2.ipynb
notebook/ComputerVision/exercises/ex3/: ex3-soln.ipynb  ex3.ipynb  ex3.py
notebook/ComputerVision/exercises/ex4/: ex4.ipynb  ex_4_4_soln.ipynb
notebook/ComputerVision/exercises/ex6/: ex6.ipynb
notebook/ComputerVision/exercises/ex7/: ex7_solution.ipynb
notebook/ComputerVision/exercises/ex8/: ex8_2_solution.py  ex8_solution.ipynb
notebook/Data/: preprocessing.csv
notebook/LNN-Classification/: fashionMNIST.ipynb
notebook/LNN-Regression/: Basics.ipynb  implementation.ipynb  oodComponents.ipynb
notebook/MLP/: activation-funcs.ipynb  mlp-implementation.ipynb
notebook/RNNs/: advanced.ipynb  basics.ipynb  implementationRNN.ipynb  introductionRNN.ipynb
notebook/survivalSkills/: autodiff.ipynb  calculus.ipynb  dataMani.ipynb  linearalz.ipynb  probStats.ipynb
