[project]
name = "d2l-learnings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "d2l==1.0.3",
    "einops>=0.8.1",
    "fastparquet>=2024.11.0",
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "opencv-python>=4.8.1.78",
    "pyarrow>=20.0.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch==2.0.0",
    "torchvision==0.15.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
]
